[package]
name = "uplc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
blst = "0.3.13"
bumpalo = { version = "3.16.0", features = ["collections"] }
chumsky = { version = "=1.0.0-alpha.7", features = ["pratt"] }
cryptoxide = "0.4.4"
minicbor = { version = "0.25.1", features = ["std"] }
once_cell = "1.20.2"
rug = { version = "1.26.0", default-features = false, features = [
    "integer",
    "std",
] }
secp256k1 = "0.30.0"
thiserror = "1.0.63"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
insta = "1.40.0"
itertools = "0.13.0"
ouroboros = "0.18.4"
pretty_assertions = "1.4.0"
uplc_macros = { version = "0.1.0", path = "../uplc_macros" }

[[bench]]
name = "bench_main"
harness = false
